updating css style and changing curriculum page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
     
     <!-- CSS -->
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-    <!-- <link rel="stylesheet" href="{{ '/assets/css/vendor/bootstrap.css' | relative_url }}"> -->
+    <link rel="stylesheet" href="{{ '/assets/css/vendor/bootstrap.css' | relative_url }}">
 
     <!--Favicon-->
     <link rel="shortcut icon" href="{{ site.theme_settings.favicon | relative_url }}" type="image/x-icon">
