changing footer html

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 {% if site.theme_settings.footer_text %}
 <footer class="site-footer">
 
-    <!-- <span><b>{{ site.ownerFullName }}</b></span>
+    <span><b>{{ site.ownerFullName }}</b></span>
     {% capture currentyear %}{{ 'now' | date: "%Y" }}{% endcapture %}
-    <span>© {{ currentyear }}</span> -->
+    <span>© {{ currentyear }}</span>
 
     <p class="text">{{ site.theme_settings.footer_text }}</p>
             <div class="footer-icons">
