--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,11 @@ layout: default
       <h1 id="{{ page.title | cgi_escape }}" class="title">{{ page.title }}</h1>
       {% include post_info.html post=page %}
     {% endunless %}
+    <p class="meta"> <br>
+      {% if site.reading_time %} <i class="fa fa-clock-o"></i> {% include read-time.html %}{% endif %}
+    </p>
   </header>
+
   <section class="post-content">
   {% if page.bootstrap %}
     <div class="bootstrap-iso">
