--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,8 @@
 <head>
     <meta charset="utf-8">
-    <!-- <meta name="description" content="Fernando Baptistella - Resume">
-    <meta name="keywords" content="personal, portfolio, resume"> -->
+    <meta name="description" content="Hello there! This is my personal blog and offers me a space to write down and share the things I’m searching and learning.">
+    <meta name="keywords" content="personal, portfolio, resume">
+    <meta name="author" content="Fernando Baptistella">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- Main JS (navbar.js, katex_init.js and masonry_init.js)-->
